# NEAT_for_mario

./: README.md  config  gymTools.py  main.py  neat-checkpoint-10  neat-checkpoint-100  neat-checkpoint-105  neat-checkpoint-110  neat-checkpoint-115  neat-checkpoint-120  neat-checkpoint-125  neat-checkpoint-130  neat-checkpoint-135  neat-checkpoint-140  neat-checkpoint-145  neat-checkpoint-15  neat-checkpoint-150  neat-checkpoint-155  neat-checkpoint-160  neat-checkpoint-165  neat-checkpoint-170  neat-checkpoint-175  neat-checkpoint-180  neat-checkpoint-185  neat-checkpoint-190  neat-checkpoint-195  neat-checkpoint-20  neat-checkpoint-200  neat-checkpoint-205  neat-checkpoint-210  neat-checkpoint-215  neat-checkpoint-220  neat-checkpoint-225  neat-checkpoint-230  neat-checkpoint-235  neat-checkpoint-240  neat-checkpoint-245  neat-checkpoint-25  neat-checkpoint-250  neat-checkpoint-255  (+53 more)
.github/workflows/: restrict-merge.yml
legacy/: step2_processed_mario.py
src/: __init__.py  environment.py  visualizer.py
