[project]
name = "neat-for-mario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "gym-super-mario-bros>=9.0.0",
    "gymnasium>=1.3.0",
    "matplotlib>=3.10.9",
    "neat-python>=2.0.0",
    "nes-py>=9.0.0",
    "pygame>=2.6.1",
]
